# kml-heatmap

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  _typos.toml  build.js  codecov.yml  eslint.config.js  flight_supplements.json.example  flight_time_offsets.json.example  kml-heatmap.py  mypy.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  serve.py  tsconfig.eslint.json  tsconfig.json  vitest.config.js
.github/: dependabot.yml
data/: 10_DEAGJ_DA20.kml  11_DEAGJ_DA20.kml  12_DEAGJ_DA20.kml  13_DEAGJ_DA20.kml  14_DEAGJ_DA20.kml  15_DEAGJ_DA20.kml  16_DEAGJ_DA20.kml  17_DEAGJ_DA20.kml  18_DEAGJ_DA20.kml  19_DEAGJ_DA20.kml  1_DEAGJ_DA20.kml  20_DESST_C172.kml  21_DESST_C172.kml  22_DESST_C172.kml  23_DEHYL_DA40.kml  24_DEHYL_DA40.kml  25_DESST_C172.kml  26_DEHYL_DA40.kml  27_DEAGJ_DA20.kml  28_DEAGJ_DA20.kml  29_DEAGJ_DA20.kml  2_DEAGJ_DA20.kml  30_DEAGJ_DA20.kml  31_DEAGJ_DA20.kml  32_DESST_C172.kml  33_DESST_C172.kml  34_DEAGJ_DA20.kml  35_DEAGJ_DA20.kml  36_DEHYL_DA40.kml  37_DEHYL_DA40.kml  38_DEHYL_DA40.kml  39_DEAGJ_DA20.kml  3_DEAGJ_DA20.kml  40_DEAGJ_DA20.kml  41_DELGD_C182.kml  42_DELGD_C182.kml  43_DELGD_C182.kml  44_DEAGJ_DA20.kml  45_DEAGJ_DA20.kml  46_DEAGJ_DA20.kml  (+58 more)
docs/: bundle.js  index.html  manifest.json  map.js  mapApp.bundle.js  map_config.js  styles.css
kml_heatmap/: __init__.py  __main__.py  aircraft.py  airport_lookup.py  airports.py  cache.py  cli.py  config_validator.py  constants.py  data_exporter.py  decorators.py  exceptions.py  exporter.py  (+20 more)
(+188 files in other folders)
